feat: add some remote desktop solutions

--- a/recipes/common/default-flatpaks.yml
+++ b/recipes/common/default-flatpaks.yml
@@ -25,3 +25,5 @@ modules:
         - org.remmina.Remmina
         - org.videolan.VLC
         - org.pulseaudio.pavucontrol
+        - com.anydesk.Anydesk
+        - com.rustdesk.RustDesk
