feat: add virtualization support

--- a/recipes/common/rpm-ostree.yml
+++ b/recipes/common/rpm-ostree.yml
@@ -34,6 +34,14 @@ modules:
       - efivar-libs
       - smartmontools
       - coreos-installer
+      - virt-install
+      - libvirt-daemon-config-network
+      - libvirt-daemon-kvm
+      - qemu-kvm
+      - virt-manager
+      - virt-viewer
+      - virt-top
+      - guestfs-tools
     remove:
       - gnome-tour
       - firefox
