--- a/recipes/common/rpm-ostree.yml
+++ b/recipes/common/rpm-ostree.yml
@@ -29,6 +29,8 @@ modules:
       - netcat
       - traceroute
       - mtr
+      - screen
+      - picocom
       - rpiboot
       - efivar
       - efivar-libs
