feat: pin base image tag to 42

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -2,6 +2,6 @@
 name: silverred
 description:  A custom Fedora Silverblue bootable OCI image made with BlueBuild
 base-image: ghcr.io/ublue-os/silverblue-main
-image-version: latest
+image-version: 42
 modules:
   - from-file: common/silverblue-main.yml
