feat: add Bitwarden Desktop flatpak

--- a/recipes/common/default-flatpaks.yml
+++ b/recipes/common/default-flatpaks.yml
@@ -28,3 +28,4 @@ modules:
         - org.pulseaudio.pavucontrol
         - com.anydesk.Anydesk
         - com.rustdesk.RustDesk
+        - com.bitwarden.desktop
